@@ -4,11 +4,11 @@ set MAKEFLAGS=
 path %PATH%;%1%\bin
 set current_dir=%cd%
 
-call setenv.bat  %1 chk
+call setenv.bat %1 chk
 
 cd %current_dir%
 cd src\drivers
-rem lib /DEF:usbd.def
+
 @echo on
 build -c -g -w
 @echo on
